Changed AJAX method with a #

--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -24,7 +24,7 @@
         <img class="col-4" src="http://placehold.it/256x256" alt="">
         <div class="col-1"></div>
         <div class="col-3">
-          <button type="button" class="button col-10" onclick="getRequest('aboutme.html');">About me</button>
+          <button type="button" class="button col-10"><a href="#aboutme">About me</a></button>
         </div>
       </div>
       <div class="row">
