Added meta data

--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Portfolio</title>
-  <meta name="author" content="name">
-  <meta name="description" content="description here">
-  <meta name="keywords" content="keywords,here">
+    <title id="title">Portfolio - Peter Romijn</title>
+  <meta name="author" content="Peter Romijn">
+  <meta name="description" content="Portfolio Peter Romijn">
+  <meta name="keywords" content="peter, romijn, portfolio, webdeveloper, tiel">
+
   <link rel="stylesheet" href="style/grid.css" type="text/css">
   <link rel="stylesheet" href="style/style.css" type="text/css">
 
