changed the home page

--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -17,24 +17,21 @@
   <body onhashchange="deepLink();" onload="deepLink();">
     <div class="wrapper">
       <div id="content">
-      <div class="row">
-        <div class="col-3">
-          <button type="button" class="button col-10"><a href="#mywork">My projects</a></button>
-        </div>
-        <div class="col-1"></div>
-        <img class="col-4" src="http://placehold.it/256x256" alt="">
-        <div class="col-1"></div>
-        <div class="col-3">
-          <button type="button" class="button col-10"><a href="#aboutme">About me</a></button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4">
-          <button type="button" class="col-12 button button_bottom"><a href="#contact">Contact me</a></button>
-        </div>
-        <div class="col-4"></div>
-      </div>
+
+    <div class="row">
+      <div class="col-4"></div>
+      <img class="col-4" src="http://placehold.it/256x256" alt="">
+      <div class="col-4"></div>
+    </div>
+
+    <div class="row">
+      <div class="col-1"></div>
+      <div class="col-2 div_button"><a href="#mywork">My work</a></div>
+      <div class="col-2"></div>
+      <div class="col-2 div_button"><a href="#contact">Contact me</a></div>
+      <div class="col-2"></div>
+      <div class="col-2 div_button"><a href="#aboutme">About me</a></div>
+      <div class="col-1"></div>
     </div>
 
     </div>
