--- a/AJAX/aboutme.html
+++ b/AJAX/aboutme.html
@@ -3,9 +3,9 @@
 
   <div class="col-10">
     <div class="row">
-      <div class="col-4"><button type="button" class="col-7"></button></div>
+      <div class="col-4"><button type="button" class="col-7"><a href="#mywork">My work</a></button></div>
         <img src="http://placehold.it/256x256" class="col-4">
-        <div class="col-4"><button type="button" class="col-7"></button></div>
+        <div class="col-4"><button type="button" class="col-7"><a href="#contact">Contact me</a></button></div>
     </div>
 
     <div class="row">
