--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -6,7 +6,7 @@
     <title id="title">Portfolio - Peter Romijn</title>
   <meta name="author" content="Peter Romijn">
   <meta name="description" content="Portfolio Peter Romijn">
-  <meta name="keywords" content="peter, romijn, portfolio, webdeveloper, tiel">
+  <meta name="keywords" content="Peter, Romijn, portfolio, webdeveloper, Tiel">
 
   <link rel="stylesheet" href="style/grid.css" type="text/css">
   <link rel="stylesheet" href="style/style.css" type="text/css">
@@ -17,23 +17,22 @@
   <body onhashchange="deepLink();" onload="deepLink();">
     <div class="wrapper">
       <div id="content">
+        <div class="row">
+          <div class="col-4"></div>
+          <img class="col-4" src="http://placehold.it/256x256" alt="">
+          <div class="col-4"></div>
+        </div>
 
-    <div class="row">
-      <div class="col-4"></div>
-      <img class="col-4" src="http://placehold.it/256x256" alt="">
-      <div class="col-4"></div>
-    </div>
-
-    <div class="row">
-      <div class="col-1"></div>
-      <div class="col-2 div_button"><a href="#mywork">My work</a></div>
-      <div class="col-2"></div>
-      <div class="col-2 div_button"><a href="#contact">Contact me</a></div>
-      <div class="col-2"></div>
-      <div class="col-2 div_button"><a href="#aboutme">About me</a></div>
-      <div class="col-1"></div>
-    </div>
-
+        <div class="row">
+          <div class="col-1"></div>
+          <div class="col-2 div_button"><a href="#mywork">My work</a></div>
+          <div class="col-2"></div>
+          <div class="col-2 div_button"><a href="#contact">Contact me</a></div>
+          <div class="col-2"></div>
+          <div class="col-2 div_button"><a href="#aboutme">About me</a></div>
+          <div class="col-1"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
