--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -1,10 +1,10 @@
       <div class="row">
         <!-- Header -->
-        <div class="col-4"><button type="button" class="col-7"></button></div>
-        <a href="">
+        <div class="col-4"><button type="button" class="col-7"><a href="#aboutme">About me</a></button></div>
+        <a href="index.html">
           <img src="logo.png" class="col-4">
         </a>
-        <div class="col-4"><button type="button" class="col-7"></button></div>
+        <div class="col-4"><button type="button" class="col-7"><a href="#contact">Contact me</a></button></div>
       </div>
         <!-- End header -->
 
