--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -14,7 +14,7 @@
   <script src="main.js"></script>
 
   </head>
-  <body onhashchange="deepLink();" onload="deepLink();">
+  <body onhashchange="deepLink();" class="background_home" onload="deepLink();">
     <div class="wrapper">
       <div id="content">
         <div class="row">
@@ -25,11 +25,11 @@
 
         <div class="row">
           <div class="col-1"></div>
-          <div class="col-2 div_button"><a href="#mywork">My work</a></div>
+          <div class="col-2 div_button"><a href="#mywork"><span class="opacityFix">My work</span></a></div>
           <div class="col-2"></div>
-          <div class="col-2 div_button"><a href="#contact">Contact me</a></div>
+          <div class="col-2 div_button"><a href="#contact"><span class="opacityFix">Contact me</span></a></div>
           <div class="col-2"></div>
-          <div class="col-2 div_button"><a href="#aboutme">About me</a></div>
+          <div class="col-2 div_button"><a href="#aboutme"><span class="opacityFix">About me</span></a></div>
           <div class="col-1"></div>
         </div>
       </div>
