--- a/AJAX/contact.html
+++ b/AJAX/contact.html
@@ -1,9 +1,9 @@
     <div class="row">
-      <div class="col-4"><button type="button" class="col-7"><a href="#aboutme">About me</a></button></div>
+      <div class="col-4"><div class="col-7 div_button"><a href="#aboutme">About me</a></div></div>
       <a href="index.html">
         <img src="logo.png" class="col-4">
       </a>
-      <div class="col-4"><button type="button" class="col-7"><a href="#mywork">My work</a></button></div>
+      <div class="col-4"><div class="col-7 div_button"><a href="#mywork">My work</a></div></div>
     </div>
 
     <div class="row">
