--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -1,10 +1,10 @@
       <div class="row">
         <!-- Header -->
-        <div class="col-4"><button type="button" class="col-7"><a href="#aboutme">About me</a></button></div>
+        <div class="col-4"><div class="col-7 div_button"><a href="#aboutme"><span class="opacityFix">About me</span></a></div></div>
         <a href="index.html">
           <img src="logo.png" class="col-4">
         </a>
-        <div class="col-4"><button type="button" class="col-7"><a href="#contact">Contact me</a></button></div>
+        <div class="col-4"><div class="col-7 div_button"><a href="#contact">Contact me</a></div></div>
       </div>
         <!-- End header -->
 
