Changed some navigation and style

--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -14,24 +14,27 @@
   <script src="main.js"></script>
 
   </head>
-  <body onhashchange="deepLink();" class="background_home" onload="deepLink();">
+  <body onhashchange="deepLink();" onload="loadItem('footer', 'footer.html');" class="background_home" onload="deepLink();">
     <div class="wrapper">
       <div id="content">
         <div class="row">
-          <div class="col-4"></div>
-          <img class="col-4" src="http://placehold.it/256x256" alt="">
-          <div class="col-4"></div>
+          <div class="col-4 col-m-3"></div>
+          <img class="col-4 col-m-6" src="http://placehold.it/256x256" alt="">
+          <div class="col-4 col-m-3"></div>
         </div>
 
         <div class="row">
-          <div class="col-1"></div>
-          <div class="col-2 div_button"><a href="#mywork"><span class="opacityFix">My work</span></a></div>
-          <div class="col-2"></div>
-          <div class="col-2 div_button"><a href="#contact"><span class="opacityFix">Contact me</span></a></div>
-          <div class="col-2"></div>
-          <div class="col-2 div_button"><a href="#aboutme"><span class="opacityFix">About me</span></a></div>
-          <div class="col-1"></div>
+          <div class="col-1 col-m-0">&nbsp;</div>
+          <div class="col-2 col-m-3 div_button"><a href="#mywork"><span class="opacityFix">My work</span></a></div>
+          <div class="col-2 col-m-1"></div>
+          <div class="col-2 col-m-4 div_button"><a href="#contact"><span class="opacityFix">Contact me</span></a></div>
+          <div class="col-2 col-m-1"></div>
+          <div class="col-2 col-m-3 div_button"><a href="#aboutme"><span class="opacityFix">About me</span></a></div>
+          <div class="col-1 col-m-0">&nbsp;</div>
         </div>
+      </div>
+      <div id="footer" class="footer">
+
       </div>
     </div>
   </body>
