--- a/AJAX/aboutme.html
+++ b/AJAX/aboutme.html
@@ -1,11 +1,22 @@
 <div class="row">
+  <!-- Header -->
+  <div class="col-2"></div>
+  <div class="div_button col-2 margin-header"><a href="#mywork">My work</a></div>
+  <a href="index.html">
+    <img src="logo.png" class="col-4">
+  </a>
+  <div class="col-2 div_button margin-header"><a href="#contact">Contact me</a></div>
+  <div class="col-2"></div>
+</div>
+
+<div class="row">
   <div class="col-1"></div>
 
   <div class="col-10">
     <div class="row">
-      <div class="col-4"><div class="col-7 div_button"><a href="#mywork">My work</a></div></div>
+      <div class="col-4"></div>
         <img src="http://placehold.it/256x256" class="col-4">
-      <div class="col-4"><div class="col-7 div_button"><a href="#contact">Contact me</a></div></div>
+      <div class="col-4"></div>
     </div>
 
     <div class="row">
