--- a/AJAX/contact.html
+++ b/AJAX/contact.html
@@ -1,9 +1,12 @@
     <div class="row">
-      <div class="col-4"><div class="col-7 div_button"><a href="#aboutme">About me</a></div></div>
+      <!-- Header -->
+      <div class="col-2"></div>
+      <div class="div_button col-2 margin-header"><a href="#aboutme">About me</a></div>
       <a href="index.html">
         <img src="logo.png" class="col-4">
       </a>
-      <div class="col-4"><div class="col-7 div_button"><a href="#mywork">My work</a></div></div>
+      <div class="col-2 div_button margin-header"><a href="#mywork">My work</a></div>
+      <div class="col-2"></div>
     </div>
 
     <div class="row">
