--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -1,12 +1,13 @@
-      <div class="row">
-        <!-- Header -->
-        <div class="col-4"><div class="col-7 div_button"><a href="#aboutme"><span class="opacityFix">About me</span></a></div></div>
-        <a href="index.html">
-          <img src="logo.png" class="col-4">
-        </a>
-        <div class="col-4"><div class="col-7 div_button"><a href="#contact">Contact me</a></div></div>
-      </div>
-        <!-- End header -->
+        <div class="row">
+          <!-- Header -->
+          <div class="col-2"></div>
+          <div class="div_button col-2 margin-header"><a href="#aboutme">About me</a></div>
+          <a href="index.html">
+            <img src="logo.png" class="col-4">
+          </a>
+          <div class="col-2 div_button margin-header"><a href="#contact">Contact me</a></div>
+          <div class="col-2"></div>
+        </div>
 
         <!-- Start projects -->
         <div class="row">
@@ -14,7 +15,9 @@
             <div class="col-10">
               <!-- Contains one project -->
               <h2 class="col-12">Lorem Ipsum</h2>
-              <img src="http://placehold.it/256x256" class="col-4"/>
+              <div class="col-m-3 col-0"></div>
+              <img src="http://placehold.it/256x256" class="col-4 col-m-6"/>
+              <div class="col-m-3 col-0"></div>
               <h3 class="col-7">Lorem Ipsum</h3>
               <div class="col-7">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
               <button type="button" class="col-7"><a href="#meta">More info</a></button>
@@ -27,42 +30,57 @@
             <div class="col-10">
               <!-- Contains one project -->
               <h2 class="col-12">Lorem Ipsum</h2>
-              <img src="http://placehold.it/256x256" class="col-4"/>
+              <div class="col-m-3 col-0"></div>
+              <img src="http://placehold.it/256x256" class="col-4 col-m-6"/>
+              <div class="col-m-3 col-0"></div>
               <h3 class="col-7">Lorem Ipsum</h3>
               <div class="col-7">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-              <button type="button" class="col-7">
+              <button type="button" class="col-7"><a href="#meta">More info</a></button>
             </div>
           <div class="col-1"></div>
         </div>
         <!-- End projects -->
 
         <!-- Start experiments -->
-        <div class="row">
           <h3 class="col-12">My experiments</h3>
-          <div class="col-3">
-            <img src="http://placehold.it/256x256" class="col-12">
-            <div class="col-12">Lorem Ipsum</div>
-            <button type="button" class="col-12">
+          <div class="col-3 col-m-6">
+            <div class="col-m-3 col-0"></div>
+            <img src="http://placehold.it/256x256" class="col-12 col-m-6">
+            <div class="col-m-3 col-0"></div>
+            <div class="col-12 center-text">Lorem Ipsum</div>
+            <div class="col-m-3 col-0"></div>
+            <button type="button" class="col-m-6 col-12">
+            <div class="col-m-3 col-0"></div>
           </div>
 
-          <div class="col-3">
-            <img src="http://placehold.it/256x256" class="col-12">
-            <div class="col-12">Lorem Ipsum</div>
-            <button type="button" class="col-12">
+          <div class="col-3 col-m-6">
+            <div class="col-m-3 col-0"></div>
+            <img src="http://placehold.it/256x256" class="col-12 col-m-6">
+            <div class="col-m-3 col-0"></div>
+            <div class="col-12 center-text">Lorem Ipsum</div>
+            <div class="col-m-3 col-0"></div>
+            <button type="button" class="col-m-6 col-12">
+            <div class="col-m-3 col-0"></div>
           </div>
 
-          <div class="col-3">
-            <img src="http://placehold.it/256x256" class="col-12">
-            <div class="col-12">Lorem Ipsum</div>
-            <button type="button" class="col-12">
+          <div class="col-3 col-m-6">
+            <div class="col-m-3 col-0"></div>
+            <img src="http://placehold.it/256x256" class="col-12 col-m-6">
+            <div class="col-m-3 col-0"></div>
+            <div class="col-12 center-text">Lorem Ipsum</div>
+            <div class="col-m-3 col-0"></div>
+            <button type="button" class="col-m-6 col-12">
+            <div class="col-m-3 col-0"></div>
           </div>
 
-
-          <div class="col-3">
-            <img src="http://placehold.it/256x256" class="col-12">
-            <div class="col-12">Lorem Ipsum</div>
-            <button type="button" class="col-12">
+          <div class="col-3 col-m-6">
+            <div class="col-m-3 col-0"></div>
+            <img src="http://placehold.it/256x256" class="col-12 col-m-6">
+            <div class="col-m-3 col-0"></div>
+            <div class="col-12 center-text">Lorem Ipsum</div>
+            <div class="col-m-3 col-0"></div>
+            <button type="button" class="col-m-6 col-12">
+            <div class="col-m-3 col-0"></div>
           </div>
-        </div>
         <!-- End experiments -->
         <div class="col-1"></div>
