--- a/AJAX/meta.html
+++ b/AJAX/meta.html
@@ -1,7 +1,7 @@
     <div class="row">
       <!-- Start header -->
       <a href="#mywork">
-        <img src="back-arrow.png" class="col-1 col-m-2"/>
+        <img src="back-arrow.png" class="arrow-size col-1 col-m-2"/>
       </a>
         <div class="col-10">
           <img src="http://placehold.it/256x70" class="col-12"/>
