--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -42,6 +42,7 @@
         <!-- End projects -->
 
         <!-- Start experiments -->
+        <div class="row">
           <h3 class="col-12">My experiments</h3>
           <div class="col-3 col-m-6">
             <div class="col-m-3 col-0"></div>
@@ -82,5 +83,6 @@
             <button type="button" class="col-m-6 col-12">
             <div class="col-m-3 col-0"></div>
           </div>
+        </div>
         <!-- End experiments -->
         <div class="col-1"></div>
