Changed picture link

--- a/AJAX/contact.html
+++ b/AJAX/contact.html
@@ -2,7 +2,7 @@
       <!-- Header -->
       <div class="col-2"></div>
       <div class="div_button col-2 margin-header"><a href="#aboutme">About me</a></div>
-      <a href="index.html">
+      <a href="#">
         <img src="logo.png" class="col-4">
       </a>
       <div class="col-2 div_button margin-header"><a href="#mywork">My work</a></div>
