--- a/AJAX/contact.html
+++ b/AJAX/contact.html
@@ -26,7 +26,7 @@
             <label class="col-12">Message</label>
             <textarea class="col-12"></textarea>
 
-            <input type="submit" name="" class="col-12">
+            <input type="submit" name="send" value="Send" class="div_button col-3">
           </form>
 
           <div class="col-6">
