Added loader + info

--- a/AJAX/contact.html
+++ b/AJAX/contact.html
@@ -27,16 +27,31 @@
             <textarea class="col-12"></textarea>
 
             <input type="submit" name="send" value="Send" class="div_button col-3">
+            <div class="col-9">
+              <div id="loader" class="sk-fading-circle">
+                <div class="sk-circle1 sk-circle"></div>
+                <div class="sk-circle2 sk-circle"></div>
+                <div class="sk-circle3 sk-circle"></div>
+                <div class="sk-circle4 sk-circle"></div>
+                <div class="sk-circle5 sk-circle"></div>
+                <div class="sk-circle6 sk-circle"></div>
+                <div class="sk-circle7 sk-circle"></div>
+                <div class="sk-circle8 sk-circle"></div>
+                <div class="sk-circle9 sk-circle"></div>
+                <div class="sk-circle10 sk-circle"></div>
+                <div class="sk-circle11 sk-circle"></div>
+                <div class="sk-circle12 sk-circle"></div>
+              </div>
+            </div>
           </form>
 
           <div class="col-6">
-            <img src="contact-icon.png" class="col-4">
+            <img src="contact-icon.png" class="col-2">
             <ul class="col-12">
-              <li>Item</li>
-              <li>Item</li>
-              <li>Item</li>
-              <li>Item</li>
-              <li>Item</li>
+              <li>Peter Romijn</li>
+              <li>Born: 07-22-1998</li>
+              <li>City: Tiel</li>
+              <li>Mail: <a href="mailto:peter@samebestdevelopment.nl">peter@samebestdevelopment.nl</a></li>
             </ul>
           </div>
         </div>
