Removed the particles-js

--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -15,6 +15,8 @@
 
   </head>
   <body onhashchange="deepLink(); footerLoad();" onload="deepLink(); footerLoad();" class="background_home">
+    <!-- <div id="particles-js"></div> -->
+
     <div class="wrapper">
       <div id="content">
         <div class="row">
@@ -22,6 +24,8 @@
           <img class="col-4 col-m-6" src="http://placehold.it/256x256" alt="">
           <div class="col-4 col-m-3"></div>
         </div>
+
+        <h1 class="col-12 center-text">Portfolio - Peter Romijn</h1>
 
         <div class="row">
           <div class="col-1 col-m-0">&nbsp;</div>
