Centered the title

--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -43,7 +43,7 @@
 
         <!-- Start experiments -->
         <div class="row">
-          <h3 class="col-12">My experiments</h3>
+          <h2 class="col-12 center-text">My experiments</h2>
           <div class="col-3 col-m-6">
             <div class="col-m-3 col-0"></div>
             <img src="http://placehold.it/256x256" class="col-12 col-m-6">
