--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -8,11 +8,36 @@
   <meta name="description" content="Portfolio Peter Romijn">
   <meta name="keywords" content="Peter, Romijn, portfolio, webdeveloper, Tiel">
 
+  </head>
+  <body onhashchange="deepLink();" onload="deepLink();" class="background_home">
+    <div class="wrapper">
+      <div class="row">
+        <div class="col-4 col-m-3"></div>
+        <a href="#">
+          <img src="logo.png" class="col-4 col-m-6" />
+        </a>
+        <div class="col-4 col-m-3"></div>
+      </div>
+        <div id="nav" class="col-12">
+            <ul id="width-ul">
+                <li><a href="#">Home</a></li>
+                <li><a href="#aboutme">About</a></li>
+                <li><a href="#mywork">Work</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+      <div id="content">
+      </div>
+      <div class="footer">Portfolio - Peter Romijn</div>
+    </div>
+  </body>
+  
   <link rel="stylesheet" href="style/grid.css" type="text/css" async>
   <link rel="stylesheet" href="style/style.css" type="text/css" async>
 
   <script src="main.js" async></script>
   <script src="typer.js" async></script>
+
   <script>
     var textArray = [];
     textArray[0] = "I'm a programmer";
@@ -24,31 +49,4 @@
     // ID of the div that will contains the div
     // If the blinker needs to work
   </script>
-
-  </head>
-  <body onhashchange="deepLink(); footerLoad();" onload="deepLink(); footerLoad();" class="background_home">
-    <div class="wrapper">
-      <div id="content">
-        <div class="row">
-          <div class="col-4 col-m-3"></div>
-          <img class="col-4 col-m-6" src="http://placehold.it/256x256" alt="">
-          <div class="col-4 col-m-3"></div>
-        </div>
-
-        <h1 class="col-12 center-text">Portfolio - Peter Romijn</h1>
-        <div class="col-12 center-text"><div class="center-text col-12" id="text">&nbsp;</div><div id="blinker">&nbsp;</div></div>
-
-        <div class="row">
-          <div class="col-1 col-m-0">&nbsp;</div>
-          <div class="col-2 col-m-3 div_button"><a href="#mywork">My work</span></a></div>
-          <div class="col-2 col-m-1"></div>
-          <div class="col-2 col-m-4 div_button"><a href="#contact">Contact me</span></a></div>
-          <div class="col-2 col-m-1"></div>
-          <div class="col-2 col-m-3 div_button"><a href="#aboutme">About me</span></a></div>
-          <div class="col-1 col-m-0">&nbsp;</div>
-        </div>
-      </div>
-    </div>
-    <div id="footer-content"></div>
-  </body>
 </html>
