--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -8,8 +8,19 @@
   <meta name="description" content="Portfolio Peter Romijn">
   <meta name="keywords" content="Peter, Romijn, portfolio, webdeveloper, Tiel">
 
+  <script>
+    var textArray = [];
+    textArray[0] = "I'm a programmer";
+    textArray[1] = "Building web applications and websites";
+    textArray[2] = "With: HTML, CSS, Javascript, PHP and SQL";
+    // Texts in a array
+    // Text speed
+    // ID of the div that will contains the div
+    // If the blinker needs to work
+  </script>
+
   </head>
-  <body onhashchange="deepLink();" onload="deepLink();" class="background_home">
+  <body onhashchange="deepLink();" onload='deepLink(); intializeTyper(textArray, "normal", "text", "false");' class="background_home">
     <div class="wrapper">
       <div class="row">
         <div class="col-4 col-m-3"></div>
@@ -26,27 +37,17 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
+        <div id="loader"></div>
       <div id="content">
       </div>
       <div class="footer">Portfolio - Peter Romijn</div>
     </div>
   </body>
-  
+
   <link rel="stylesheet" href="style/grid.css" type="text/css" async>
   <link rel="stylesheet" href="style/style.css" type="text/css" async>
 
-  <script src="main.js" async></script>
-  <script src="typer.js" async></script>
+  <script src="js/main.js" async></script>
+  <script src="js/typer.js" async></script>
 
-  <script>
-    var textArray = [];
-    textArray[0] = "I'm a programmer";
-    textArray[1] = "Building web applications and websites";
-    textArray[2] = "With: HTML, CSS, Javascript, PHP and SQL";
-    intializeTyper(textArray, "normal", "text", "false");
-    // Texts in a array
-    // Text speed
-    // ID of the div that will contains the div
-    // If the blinker needs to work
-  </script>
 </html>
