--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -20,7 +20,7 @@
   </script>
 
   </head>
-  <body onhashchange="deepLink();" onload='deepLink(); intializeTyper(textArray, "normal", "text", "false");' class="background_home">
+  <body onhashchange="deepLink();" onload='deepLink();' class="background_home">
     <div class="wrapper">
       <div class="row">
         <div class="col-4 col-m-3"></div>
@@ -37,7 +37,22 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
-        <div id="loader"></div>
+
+        <div id="loader" style="display: none;" class="sk-fading-circle">
+          <div class="sk-circle1 sk-circle"></div>
+          <div class="sk-circle2 sk-circle"></div>
+          <div class="sk-circle3 sk-circle"></div>
+          <div class="sk-circle4 sk-circle"></div>
+          <div class="sk-circle5 sk-circle"></div>
+          <div class="sk-circle6 sk-circle"></div>
+          <div class="sk-circle7 sk-circle"></div>
+          <div class="sk-circle8 sk-circle"></div>
+          <div class="sk-circle9 sk-circle"></div>
+          <div class="sk-circle10 sk-circle"></div>
+          <div class="sk-circle11 sk-circle"></div>
+          <div class="sk-circle12 sk-circle"></div>
+        </div>
+
       <div id="content">
       </div>
       <div class="footer">Portfolio - Peter Romijn</div>
