Changed some style

--- a/AJAX/contact.html
+++ b/AJAX/contact.html
@@ -15,8 +15,8 @@
             <label class="col-12">Message</label>
             <textarea class="col-12"></textarea>
 
-            <input type="submit" name="send" value="Send" class="div_button col-3">
-            <div class="col-9">
+            <input type="submit" name="send" value="Send" class="div_button col-4 col-m-5">
+            <div class="col-8 col-m-7">
             </div>
           </form>
 
@@ -26,6 +26,7 @@
               <li>Peter Romijn</li>
               <li>Born: 07-22-1998</li>
               <li>City: Tiel</li>
+              <li>Country: The Netherlands</li>
               <li>Mail: <a href="mailto:peter@samebestdevelopment.nl">peter@samebestdevelopment.nl</a></li>
             </ul>
           </div>
