--- a/AJAX/aboutme.html
+++ b/AJAX/aboutme.html
@@ -24,7 +24,7 @@
             <li>SQL</li>
           </ul>
           <br />
-          <a href="">Download CV</a>
+          <a target="_blank" href="file/CV-Peter-Romijn.pdf">Download CV</a>
         </p>
       </div>
       <div class="col-2"></div>
