--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -5,10 +5,10 @@
               <!-- Contains one project -->
               <h2 class="col-12">SameBestSignage</h2>
               <div class="col-m-3 col-0"></div>
-              <img src="http://placehold.it/256x256" class="col-4 col-m-6"/>
+              <img style="background-color: black;" src="file/samebestsignage.png" class="col-4 col-m-6"/>
               <div class="col-m-3 col-0"></div>
               <h3 class="col-7">Ticket system</h3>
-              <div class="col-7"><p>SameBestSignage is gebouwd toen ik stage liep bij <a href="digi-menu.nl">Digi Menu</a>
+              <div class="col-7"><p>SameBestSignage is gebouwd toen ik stage liep bij <a href="http://digi-menu.nl">Digi Menu</a>
                 Bij Digi Menu liep ik stage als developer.<br />
                 Tijdens mijn stage vertelde mijn stage begeleider aan mij dat er vaak support problemen/tickets kwijt raakten.
                 Toen hij mij dat vertelde, legte ik het idee voor om een ticket systeem te programmeren. Met het ticket systeem kan je een ticket opnaam zetten,
@@ -18,7 +18,7 @@
                 <ul>
                   <li>Project naam: SameBestSignage</li>
                   <li>Opdrachtgever: Digi Menu</li>
-                  <li>Role: head of development</li>
+                  <li>Rol: head of development</li>
                 </ul>
               </p></div>
             </div>
@@ -31,7 +31,7 @@
               <!-- Contains one project -->
               <h2 class="col-12">Vulto Recherche</h2>
               <div class="col-m-3 col-0"></div>
-              <img src="http://placehold.it/256x256" class="col-4 col-m-6"/>
+              <img src="file/vulto.png" class="col-4 col-m-6"/>
               <div class="col-m-3 col-0"></div>
               <h3 class="col-7">Website</h3>
               <div class="col-7"><p>
@@ -42,7 +42,7 @@
                 <ul>
                   <li>Project naam: Vulto Recherche website</li>
                   <li>Opdrachtgever: Vulto Recherche</li>
-                  <li>Role: head of development</li>
+                  <li>Rol: head of development</li>
                 </ul>
                 <br />
                 <br />
@@ -58,11 +58,11 @@
           <h2 class="col-12 center-text">Mijn experimenten</h2>
           <div class="col-3 col-m-6">
             <div class="col-m-3 col-0"></div>
-            <img src="http://placehold.it/256x256" class="col-12 col-m-6">
+            <img src="file/type.gif" class="col-12 col-m-6">
             <div class="col-m-3 col-0"></div>
-            <div class="col-12 center-text"><h3>Typer project</h3></div>
+            <div class="col-12 center-text"><h3>Type project</h3></div>
             <div class="col-m-3 col-0"></div>
-            <button type="button" class="col-m-6 col-12"><a href="//typer.samebestdevelopment.nl"></a></button>
+            <button type="button" class="col-m-6 col-12"><a href="//typer.samebestdevelopment.nl">View the type project</a></button>
             <div class="col-m-3 col-0"></div>
           </div>
 
