--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -57,6 +57,7 @@
                 <li><a href="#aboutme">About</a></li>
                 <li><a href="#mywork">Work</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a target="_blank" href="//github.com/peter-4A5A"><img style="width: 0.9em;" src="file/github.png"/></a></li>
             </ul>
         </div>
 
