--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -57,43 +57,45 @@
         <div class="row">
           <h2 class="col-12 center-text">Mijn experimenten</h2>
           <div class="col-3 col-m-6">
+            <!-- <div class="col-m-3 col-0"></div>
+            <img src="http://placehold.it/256x256" class="col-12 col-m-6">
+            <div class="col-m-3 col-0"></div>
+            <div class="col-12 center-text">Lorem Ipsum</div>
+            <div class="col-m-3 col-0"></div>
+            <button type="button" class="col-m-6 col-12"></button>
+            <div class="col-m-3 col-0"></div> -->
+          </div>
+
+          <div class="col-3 col-m-6">
+            <div class="col-m-3 col-0"></div>
+            <img src="file/wordpress-sbd.png" class="col-12 col-m-6">
+            <div class="col-m-3 col-0"></div>
+            <div class="col-12 center-text">Wordpress theme</div>
+            <div class="col-m-3 col-0"></div>
+            <p class="col-12">Made the samebestdevelopment website in wordpress</p>
+            <button type="button" class="col-m-6 col-12"><a target="_blank" href="//wordpress.samebestdevelopment.nl">Site</a></button>
+            <div class="col-m-3 col-0"></div>
+          </div>
+
+          <div class="col-3 col-m-6">
             <div class="col-m-3 col-0"></div>
             <img src="file/type.gif" class="col-12 col-m-6">
             <div class="col-m-3 col-0"></div>
             <div class="col-12 center-text"><h3>Type project</h3></div>
             <div class="col-m-3 col-0"></div>
+            <p class="col-12">Made a javascript application that automaticly types</p>
             <button type="button" class="col-m-6 col-12"><a href="//typer.samebestdevelopment.nl">View the type project</a></button>
             <div class="col-m-3 col-0"></div>
           </div>
 
           <div class="col-3 col-m-6">
-            <div class="col-m-3 col-0"></div>
+            <!-- <div class="col-m-3 col-0"></div>
             <img src="http://placehold.it/256x256" class="col-12 col-m-6">
             <div class="col-m-3 col-0"></div>
             <div class="col-12 center-text">Lorem Ipsum</div>
             <div class="col-m-3 col-0"></div>
             <button type="button" class="col-m-6 col-12"></button>
-            <div class="col-m-3 col-0"></div>
-          </div>
-
-          <div class="col-3 col-m-6">
-            <div class="col-m-3 col-0"></div>
-            <img src="http://placehold.it/256x256" class="col-12 col-m-6">
-            <div class="col-m-3 col-0"></div>
-            <div class="col-12 center-text">Lorem Ipsum</div>
-            <div class="col-m-3 col-0"></div>
-            <button type="button" class="col-m-6 col-12"></button>
-            <div class="col-m-3 col-0"></div>
-          </div>
-
-          <div class="col-3 col-m-6">
-            <div class="col-m-3 col-0"></div>
-            <img src="http://placehold.it/256x256" class="col-12 col-m-6">
-            <div class="col-m-3 col-0"></div>
-            <div class="col-12 center-text">Lorem Ipsum</div>
-            <div class="col-m-3 col-0"></div>
-            <button type="button" class="col-m-6 col-12"></button>
-            <div class="col-m-3 col-0"></div>
+            <div class="col-m-3 col-0"></div> -->
           </div>
         </div>
         <!-- End experiments -->
