--- a/AJAX/aboutme.html
+++ b/AJAX/aboutme.html
@@ -4,7 +4,7 @@
   <div class="col-10">
     <div class="row">
       <div class="col-4"></div>
-        <img src="http://placehold.it/256x256" class="col-4">
+        <img src="file/peter-romijn.jpeg" class="col-4">
       <div class="col-4"></div>
     </div>
 
@@ -15,7 +15,7 @@
           <br />
           <br />
           Al op jonge leeftijd (4 jaar) had ik al intresse in de computer. Dat is hoe ouder ik werd hoe groter mijn intresse werd. Toen ik op de middelbare school (De Lingeborgh) begonnen was wist ik vrijwel zeker wat ik wilde worden, Webdeveloper!
-          Nadat ik mijn TL diploma had gehaald, heb ik me ingeschreven als student aan het ROC Midden Nederland als applicatie- en mediaontwikkeling. Waar ik nu met plezier programmeertalen zoals:
+          Nadat ik mijn TL diploma had gehaald, heb ik me ingeschreven als student aan het ROC Midden Nederland als applicatie- en mediaontwikkeling. Waar ik nu met plezier programmeertalen leer zoals:
           <ul>
             <li>HTML</li>
             <li>CSS</li>
@@ -38,8 +38,8 @@
     <div class="row">
       <div class="col-2"></div>
       <div class="col-8">
-        <p>SameBestDevelopment is mijn eigen bedrijf waarmee ik websites en webapplicaties mee ontwikkel.
-          Mijn focus ligt altijd op snelle code die overzichtelijk is. Voor de klant het makkelijk is om zich een weg te kunnen vinden in het product.
+        <p>SameBestDevelopment is mijn eigen bedrijf. SameBestDevelopment ontwikkeld websites en webapplicaties voor zijn opdrachtgevers.
+          De focus ligt altijd op snelle code die overzichtelijk is en dat het voor de klant het makkelijk is om zich een weg te kunnen vinden in het product.
           <br />
           <br />
           <a href="#mywork">Mijn projecten</a>
