--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -3,6 +3,35 @@
           <div class="col-1"></div>
             <div class="col-10">
               <!-- Contains one project -->
+              <h2 class="col-12">Toko Bandung</h2>
+              <div class="col-m-3 col-0"></div>
+              <img src="file/tokobandung-site.png" class="col-4 col-m-6"/>
+              <div class="col-m-3 col-0"></div>
+              <h3 class="col-7">Website</h3>
+              <div class="col-7"><p>
+                Toko Bandung is een oud bedrijf dat sinds 1976 bestaat in Amsterdam-West.
+                Het bedrijf is in 2016 overgenomen. De nieuwe eigenaren wilden een nieuwe website.
+                De oude website was verouderd en had geen mobiel design of was mobile-first gebouwd.
+                <br />
+                De nieuwe website moest de kleuren van hun logo hebben en overzichtelijk zijn.
+                <br />
+                <br />
+                <ul>
+                  <li>Project naam: Toko Bandung website</li>
+                  <li>Opdrachtgever: Toko Bandung</li>
+                  <li>Rol: head of development</li>
+                </ul>
+                <br />
+                <br />
+                <a href="//tokobandung.nl">tokobandung.nl</a>
+              </p></div>
+            </div>
+          <div class="col-1"></div>
+        </div>
+        <div class="row">
+          <div class="col-1"></div>
+            <div class="col-10">
+              <!-- Contains one project -->
               <h2 class="col-12">SameBestSignage</h2>
               <div class="col-m-3 col-0"></div>
               <img style="background-color: black;" src="file/samebestsignage.png" class="col-4 col-m-6"/>
@@ -66,25 +95,25 @@
             <div class="col-m-3 col-0"></div> -->
           </div>
 
-          <div class="col-3 col-m-6">
+          <div class="col-3 col-m-6 project">
             <div class="col-m-3 col-0"></div>
             <img src="file/wordpress-sbd.png" class="col-12 col-m-6">
             <div class="col-m-3 col-0"></div>
             <div class="col-12 center-text">Wordpress theme</div>
             <div class="col-m-3 col-0"></div>
-            <p class="col-12">Made the samebestdevelopment website in wordpress</p>
+            <p class="col-12">Het thema van de samebestdevelopment website gemaakt in een Wordpress thema.</p>
             <button type="button" class="col-m-6 col-12"><a target="_blank" href="//wordpress.samebestdevelopment.nl">Site</a></button>
             <div class="col-m-3 col-0"></div>
           </div>
 
-          <div class="col-3 col-m-6">
+          <div class="col-3 col-m-6 project">
             <div class="col-m-3 col-0"></div>
             <img src="file/type.gif" class="col-12 col-m-6">
             <div class="col-m-3 col-0"></div>
             <div class="col-12 center-text"><h3>Type project</h3></div>
             <div class="col-m-3 col-0"></div>
-            <p class="col-12">Made a javascript application that automaticly types</p>
-            <button type="button" class="col-m-6 col-12"><a href="//typer.samebestdevelopment.nl">View the type project</a></button>
+            <p class="col-12">Een javascript applicatie die automatisch typt.</p>
+            <button type="button" class="col-m-6 col-12"><a target="_blank" href="//typer.samebestdevelopment.nl">Bekijk het project</a></button>
             <div class="col-m-3 col-0"></div>
           </div>
 
