--- a/AJAX/aboutme.html
+++ b/AJAX/aboutme.html
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="col-2"></div>
       <div class="col-8">
-        <p><strong>Mijn naam is Peter Romijn, woonachtig in Tiel en geboren op: 22 juli 1998. Ik ben student bij ROC Midden Nederland als Applicatie- en mediaontwikkeling.</strong>
+        <p><strong>Mijn naam is Peter Romijn, woonachtig in Tiel en geboren op: 22 juli 1998. Ik ben student bij ROC Midden Nederland als Applicatie- en mediaontwikkeling. En werkzaam bij BeeInteractive.</strong>
           <br />
           <br />
           Al op jonge leeftijd (4 jaar) had ik al intresse in de computer. Dat is hoe ouder ik werd hoe groter mijn intresse werd. Toen ik op de middelbare school (De Lingeborgh) begonnen was wist ik vrijwel zeker wat ik wilde worden, Webdeveloper!
@@ -24,6 +24,7 @@
             <li>SQL</li>
           </ul>
           <br />
+          In het Datacentrum te Haarlem heb ik een hobby server waar ik mee experimenteer. 
           <a target="_blank" href="file/CV-Peter-Romijn.pdf">Download CV</a>
         </p>
       </div>
