--- a/AJAX/contact.html
+++ b/AJAX/contact.html
@@ -21,7 +21,7 @@
           </form>
 
           <div class="col-6">
-            <img src="contact-icon.png" class="col-2">
+            <img src="file/contact-icon.png" class="col-2">
             <ul class="col-12">
               <li>Peter Romijn</li>
               <li>Born: 07-22-1998</li>
