--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -47,7 +47,7 @@
       <div class="row">
         <div class="col-4 col-m-3"></div>
         <a href="#">
-          <img src="logo.png" class="col-4 col-m-6" />
+          <img src="file/logo.png" class="col-4 col-m-6" />
         </a>
         <div class="col-4 col-m-3"></div>
       </div>
