--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -23,7 +23,7 @@
                 </ul>
                 <br />
                 <br />
-                <a href="//tokobandung.nl">tokobandung.nl</a>
+                <a href="http://tokobandung.nl">tokobandung.nl</a>
               </p></div>
             </div>
           <div class="col-1"></div>
@@ -80,12 +80,42 @@
             </div>
           <div class="col-1"></div>
         </div>
+
+        <div class="row">
+          <div class="col-1"></div>
+            <div class="col-10">
+              <!-- Contains one project -->
+              <h2 class="col-12">Bee Academy</h2>
+              <div class="col-m-3 col-0"></div>
+              <img src="file/beeacademy.png" class="col-4 col-m-6"/>
+              <div class="col-m-3 col-0"></div>
+              <h3 class="col-7">Website</h3>
+              <div class="col-7"><p>
+                Bee Academy is een online marketing trainings bureau. Bee Academy had een wordpress template gekocht zodat een stagair er verder de website mee kon gaan bouwen.
+                Voor dat de website af was, had de stagair zijn uren erop zitten.
+                <br />
+                Ik heb het template op de schopgenomen, de style is compleet aangepast. Daarnaast heb ik ook de invulling (plaatjes en layout) op de website geplaatst.
+                <br />
+                <br />
+                <ul>
+                  <li>Project naam: Bee Academy website</li>
+                  <li>Opdrachtgever: Bee Academy</li>
+                  <li>Rol: head of development</li>
+                </ul>
+                <br />
+                <br />
+                <a target="_blank" href="https://beeacademy.nl">beeacademy.nl</a>
+              </p></div>
+            </div>
+          <div class="col-1"></div>
+        </div>
         <!-- End projects -->
 
         <!-- Start experiments -->
         <div class="row">
           <h2 class="col-12 center-text">Mijn experimenten</h2>
-          <div class="col-3 col-m-6">
+          <div class="col-3 col-m-0">
+            &nbsp;
             <!-- <div class="col-m-3 col-0"></div>
             <img src="http://placehold.it/256x256" class="col-12 col-m-6">
             <div class="col-m-3 col-0"></div>
@@ -102,7 +132,8 @@
             <div class="col-12 center-text">Wordpress theme</div>
             <div class="col-m-3 col-0"></div>
             <p class="col-12">Het thema van de samebestdevelopment website gemaakt in een Wordpress thema.</p>
-            <button type="button" class="col-m-6 col-12"><a target="_blank" href="//wordpress.samebestdevelopment.nl">Site</a></button>
+            <div class="col-m-3 col-0"></div>
+            <button type="button" class="col-m-6 col-12"><a target="_blank" href="http://wordpress.samebestdevelopment.nl">Site</a></button>
             <div class="col-m-3 col-0"></div>
           </div>
 
@@ -113,11 +144,13 @@
             <div class="col-12 center-text"><h3>Type project</h3></div>
             <div class="col-m-3 col-0"></div>
             <p class="col-12">Een javascript applicatie die automatisch typt.</p>
-            <button type="button" class="col-m-6 col-12"><a target="_blank" href="//typer.samebestdevelopment.nl">Bekijk het project</a></button>
+            <div class="col-m-3 col-0"></div>
+            <button type="button" class="col-m-6 col-12"><a target="_blank" href="http://typer.samebestdevelopment.nl">Bekijk het project</a></button>
             <div class="col-m-3 col-0"></div>
           </div>
 
-          <div class="col-3 col-m-6">
+          <div class="col-3 col-m-0">
+            &nbsp;
             <!-- <div class="col-m-3 col-0"></div>
             <img src="http://placehold.it/256x256" class="col-12 col-m-6">
             <div class="col-m-3 col-0"></div>
