--- a/AJAX/aboutme.html
+++ b/AJAX/aboutme.html
@@ -24,7 +24,7 @@
             <li>SQL</li>
           </ul>
           <br />
-          In het Datacentrum te Haarlem heb ik een hobby server waar ik mee experimenteer. 
+          In het Datacentrum te Haarlem heb ik een hobby server waar ik mee experimenteer.
           <a target="_blank" href="file/CV-Peter-Romijn.pdf">Download CV</a>
         </p>
       </div>
@@ -33,7 +33,7 @@
 
     <div class="row">
       <div class="col-2"></div>
-      <img class="col-8" src="logo.png">
+      <img class="col-8" src="file/logo.png">
       <div class="col-2"></div>
     </div>
     <div class="row">
