--- a/AJAX/index-content.html
+++ b/AJAX/index-content.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-4 col-m-3"></div>
-  <img class="col-4 col-m-6" src="http://placehold.it/256x256" alt="">
+  <img class="col-4 col-m-6" src="file/peter-romijn.jpeg" alt="">
   <div class="col-4 col-m-3"></div>
 
   <h1 class="col-12 center-text">Portfolio - Peter Romijn</h1>
