--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -43,8 +43,8 @@
         <div id="nav" class="col-12">
             <ul id="width-ul">
                 <li><a href="#">Home</a></li>
-                <li><a href="#aboutme">About</a></li>
-                <li><a href="#mywork">Work</a></li>
+                <li><a href="#aboutme">Over mij</a></li>
+                <li><a href="#mywork">Werk</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a target="_blank" href="//github.com/peter-4A5A"><img style="width: 0.9em;" src="file/github.png"/></a></li>
             </ul>
