--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -46,7 +46,7 @@
                 <li><a href="#aboutme">Over mij</a></li>
                 <li><a href="#mywork">Werk</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a target="_blank" href="//github.com/peter-4A5A"><img style="width: 0.9em;" src="file/github.png"/></a></li>
+                <li><a target="_blank" href="https://github.com/peter-4A5A"><img style="width: 0.9em;" src="file/github.png"/></a></li>
             </ul>
         </div>
 
