Added contact form with sending

--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -1,7 +1,7 @@
         <!-- Start projects -->
         <div class="row">
           <div class="col-1"></div>
-            <div class="col-10">
+            <article class="col-10">
               <!-- Contains one project -->
               <h2 class="col-12">Toko Bandung</h2>
               <div class="col-m-3 col-0"></div>
@@ -25,12 +25,12 @@
                 <br />
                 <a href="http://tokobandung.nl">tokobandung.nl</a>
               </p></div>
-            </div>
+            </article>
           <div class="col-1"></div>
         </div>
         <div class="row">
           <div class="col-1"></div>
-            <div class="col-10">
+            <article class="col-10">
               <!-- Contains one project -->
               <h2 class="col-12">SameBestSignage</h2>
               <div class="col-m-3 col-0"></div>
@@ -50,13 +50,13 @@
                   <li>Rol: head of development</li>
                 </ul>
               </p></div>
-            </div>
+            </article>
           <div class="col-1"></div>
         </div>
 
         <div class="row">
           <div class="col-1"></div>
-            <div class="col-10">
+            <article class="col-10">
               <!-- Contains one project -->
               <h2 class="col-12">Vulto Recherche</h2>
               <div class="col-m-3 col-0"></div>
@@ -77,13 +77,13 @@
                 <br />
                 <a target="_blank" href="http://vulto-recherche.nl">vulto-recherche.nl</a>
               </p></div>
-            </div>
+            </article>
           <div class="col-1"></div>
         </div>
 
         <div class="row">
           <div class="col-1"></div>
-            <div class="col-10">
+            <article class="col-10">
               <!-- Contains one project -->
               <h2 class="col-12">Bee Academy</h2>
               <div class="col-m-3 col-0"></div>
@@ -106,7 +106,7 @@
                 <br />
                 <a target="_blank" href="https://beeacademy.nl">beeacademy.nl</a>
               </p></div>
-            </div>
+            </article>
           <div class="col-1"></div>
         </div>
         <!-- End projects -->
@@ -125,19 +125,19 @@
             <div class="col-m-3 col-0"></div> -->
           </div>
 
-          <div class="col-3 col-m-6 project">
+          <article class="col-3 col-m-6 project">
             <div class="col-m-3 col-0"></div>
             <img src="file/wordpress-sbd.png" class="col-12 col-m-6">
             <div class="col-m-3 col-0"></div>
-            <div class="col-12 center-text">Wordpress theme</div>
+            <div class="col-12 center-text"><h3>Wordpress theme</h3></div>
             <div class="col-m-3 col-0"></div>
             <p class="col-12">Het thema van de samebestdevelopment website gemaakt in een Wordpress thema.</p>
             <div class="col-m-3 col-0"></div>
             <button type="button" class="col-m-6 col-12"><a target="_blank" href="http://wordpress.samebestdevelopment.nl">Site</a></button>
             <div class="col-m-3 col-0"></div>
-          </div>
+          </article>
 
-          <div class="col-3 col-m-6 project">
+          <article class="col-3 col-m-6 project">
             <div class="col-m-3 col-0"></div>
             <img src="file/type.gif" class="col-12 col-m-6">
             <div class="col-m-3 col-0"></div>
@@ -147,7 +147,7 @@
             <div class="col-m-3 col-0"></div>
             <button type="button" class="col-m-6 col-12"><a target="_blank" href="http://typer.samebestdevelopment.nl">Bekijk het project</a></button>
             <div class="col-m-3 col-0"></div>
-          </div>
+          </article>
 
           <div class="col-3 col-m-0">
             &nbsp;
