--- a/AJAX/contact.html
+++ b/AJAX/contact.html
@@ -5,17 +5,18 @@
         <div class="col-12">
           <form class="col-6">
             <label class="col-12">Name</label>
-              <input type="text" name="" class="col-12"/>
+              <input type="text" id='nameSender' class="col-12"/>
             <label class="col-12">Email</label>
-            <input type="text" name="" class="col-12"/>
+            <input type="text" id='emailSender' class="col-12"/>
 
             <label class="col-12">Subject</label>
-            <input type="text" name="" class="col-12"/>
+            <input type="text" id='subject' class="col-12"/>
 
             <label class="col-12">Message</label>
-            <textarea class="col-12"></textarea>
+            <textarea id='message' class="col-12"></textarea>
 
-            <input type="submit" name="send" value="Send" class="div_button col-4 col-m-5">
+            <!-- <input type="submit" name="send" value="versturen" class="div_button col-4 col-m-5"> -->
+            <button type="button" class="div_button col-4 col-m-5" onclick="sendMail();">Versturen</button>
             <div class="col-8 col-m-7">
             </div>
           </form>
